--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,6 @@ html lang="en"
     - if !Rails.env.development?
       = stylesheet_packs_with_chunks_tag "application", media: "all"
 
-
   body
     = javascript_packs_with_chunks_tag 'application'
     header.mdl-layout__header
@@ -27,6 +26,7 @@ html lang="en"
           - if current_user
             - if current_user.is_a? Admin
               = link_to "Admin page", admin_users_url, class: 'mdl-navigation__link'
+            = current_user.first_name
             = link_to "Log out", session_path, method: "delete", confirm: "confirm?", class: 'mdl-navigation__link'
           - else
             = link_to "Sign in", new_session_path, class: 'mdl-navigation__link'
