--- a/app/views/admin/users/new.html.slim
+++ b/app/views/admin/users/new.html.slim
@@ -1,1 +1,2 @@
-= render partial: 'admin/users/form', locals: { url: admin_users_path, header: 'Create new user' }
+h4 Create new user
+= render partial: 'admin/users/form', locals: { url: admin_users_path }
