--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,13 +1,32 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>
-      /* Email styles need to be inline */
-    </style>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Email template</title>
   </head>
-
-  <body>
-    <%= yield %>
+  <body bgcolor="#efefef" style="padding: 0; margin: 0;">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+      <tr>
+        <td align="center">
+          <table width="600" border="0" cellpadding="0" cellspacing="0">
+            <tr>
+              <td bgcolor="#3F52B5" align="center" style="padding: 30px 0;">
+                <span style="color:#ffffff; font-size: 20px; font-family:Arial, Helvetica, sans-serif;"><b>Task Manager</b></span>
+              </td>
+            </tr>
+            <tr>
+              <td bgcolor="#ffffff" style="padding: 40px;">
+                <p style="margin: 0;">
+                  <%= yield %>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td align="center" style="color: gray; font-size: 12px; padding-top: 40px;">&copy; 2021 Task Manager</td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
